force-app/main/default/objects/Connects_Worker_Time_Detail__c/Connects_Worker_Time_Detail__c.object-meta.xml
<CustomObject>
    <label>Connects Worker Time</label>
    <nameField>
        <displayFormat>ConnectsWorkerTime-{00000}</displayFormat>
        <label>Connects Worker Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connects Worker Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>