force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Hours_1__c.field-meta.xml
<CustomField>
    <fullName>ADP_Hours_1__c</fullName>
    <formula>if ( isblank( ADP_Time_In_2__c ) &amp;&amp; isblank( ADP_Time_Out_1__c ),

(

(floor (ADP_Time_Out_2_Proxy__c) + (ADP_Time_Out_2_Proxy__c - floor (ADP_Time_Out_2_Proxy__c))/60*100)

-

(floor (ADP_Time_In_1_Proxy__c) + (ADP_Time_In_1_Proxy__c - floor (ADP_Time_In_1_Proxy__c))/60*100)

),

(

(floor (ADP_Time_Out_1_Proxy__c) + (ADP_Time_Out_1_Proxy__c - floor (ADP_Time_Out_1_Proxy__c))/60*100)

-

(floor (ADP_Time_In_1_Proxy__c) + (ADP_Time_In_1_Proxy__c - floor (ADP_Time_In_1_Proxy__c))/60*100)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP Hours (#1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>