force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Time_In_1__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_In_1__c</fullName>
    <label>ADP Time In (#1)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>