force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Time_In_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_In_1_Formula__c</fullName>
    <formula>ADP_Time_In_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP Time In (#1)</label>
    <type>Text</type>
</CustomField>