force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Time_In_2_Formula__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_In_2_Formula__c</fullName>
    <formula>if ( isblank(ADP_Time_Out_1__c) &amp;&amp; isblank(ADP_Time_In_2__c),

&quot;No Lunch&quot;,

 ADP_Time_In_2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP Time In (#2)</label>
    <type>Text</type>
</CustomField>