force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Time_Out_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_Out_1_Formula__c</fullName>
    <formula>if ( isblank(ADP_Time_Out_1__c) &amp;&amp; isblank(ADP_Time_In_2__c),

 ADP_Time_Out_2__c,

 ADP_Time_Out_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP Time Out (#1)</label>
    <type>Text</type>
</CustomField>