force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Time_Out_1_Proxy__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_Out_1_Proxy__c</fullName>
    <label>ADP Time Out (#1) Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>