force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/ADP_Time_Out_2__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_Out_2__c</fullName>
    <label>ADP Time Out (#2)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>