force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/Connects_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Connects_Timesheet__c</fullName>
    <label>Connects Timesheet</label>
    <referenceTo>Connects_Worker_Time__c</referenceTo>
    <relationshipLabel>Connects Worker Time</relationshipLabel>
    <relationshipName>Connects_Worker_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>