force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/Intern_Total_Wages__c.field-meta.xml
<CustomField>
    <fullName>Intern_Total_Wages__c</fullName>
    <formula>ADP_Total_Hours__c * Worker__r.Latest_Wage_TCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Total Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>