force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/Intern_Total_Wages_Copy__c.field-meta.xml
<CustomField>
    <fullName>Intern_Total_Wages_Copy__c</fullName>
    <label>Worker Total Wages (Copy)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>