force-app/main/default/objects/Connects_Worker_Time_Detail__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Connects Worker Time</relationshipLabel>
    <relationshipName>Connects_Worker_Time1</relationshipName>
    <type>Lookup</type>
</CustomField>